tests/restrict-github-team-external-identity/grants-lookalike/resources.yaml
---
# The same service account name in a tenant namespace is not the provider.
apiVersion: team.github.m.upbound.io/v1alpha1
kind: TeamRepository
metadata:
  name: lookalike-recorded
  namespace: github-config
  annotations:
    crossplane.io/external-name: "99999999:ksail"
spec:
  forProvider:
    repository: ksail
    teamIdRef:
      name: admins
      policy:
        resolve: Always
